[package]
name = "custom_headers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0-alpha.1", features = ["uuid", "postgres", "tls-rustls"], default-features = false }
uuid = { version = "1.19.0", features = ["v4"] }
